# Ollama-Chat

./: .gitignore  README.md
backend/: app.py  pyproject.toml
docs/: technical_sharing.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
